--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     //implementation 'com.google.firebase:firebase-auth'
     //implementation 'com.google.firebase:firebase-firestore'
 
+    implementation("androidx.glance:glance-appwidget:1.0.0-alpha03")
+
 }
